// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default View Test error in step evaluation 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <div
            class="errorMsg error"
          >
            <div
              class="title"
            >
              errorSummaryText
            </div>
            <p>
              Failure to evaluate step
            </p>
          </div>
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt:
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt:
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration:
                </th>
                <td>
                  <span
                    class="StyledProps--font StyledProps--main timer StyledProps--inline"
                  >
                    
                    0s
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="main"
            data-mode="step-details"
          >
            <div
              class="header"
            >
              <div>
                execution.stepLogs
              </div>
              <div
                class="rhs"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
                  data-name=""
                >
                  <span
                    class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
                    data-icon="thinner-search"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input  ExpandingSearchInput--find"
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 130px;"
                    type="search"
                    value=""
                  />
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="nav-settings"
                  >
                    <svg
                      fill="none"
                      height="22"
                      viewBox="0 0 18 18"
                      width="22"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                        fill="#ccc"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                        fill="#ccc"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="full-screen"
                  >
                    <svg
                      fill="none"
                      height="22"
                      viewBox="0 0 24 24"
                      width="22"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                        stroke="currentColor"
                        stroke-linecap="round"
                      />
                    </svg>
                  </span>
                </button>
                <a
                  class="toConsoleView"
                  href="/?view=log"
                >
                  <span>
                    consoleView
                  </span>
                </a>
              </div>
            </div>
            <pre
              class="container"
            >
              <div
                class="noLogs"
              >
                common.logs.noLogsText
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default View Test failure responses 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <div
            class="Layout--vertical StyledProps--main container shrink StyledProps--background-red100 StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-medium StyledProps--padding-right-medium"
          >
            <div
              class="StyledProps--font StyledProps--main scroll"
            />
          </div>
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt:
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt:
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration:
                </th>
                <td>
                  <span
                    class="StyledProps--font StyledProps--main timer StyledProps--inline"
                  >
                    
                    0s
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="main"
            data-mode="step-details"
          >
            <div
              class="header"
            >
              <div>
                execution.stepLogs
              </div>
              <div
                class="rhs"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
                  data-name=""
                >
                  <span
                    class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
                    data-icon="thinner-search"
                  >
                    <svg
                      fill="none"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input  ExpandingSearchInput--find"
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 130px;"
                    type="search"
                    value=""
                  />
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="nav-settings"
                  >
                    <svg
                      fill="none"
                      height="22"
                      viewBox="0 0 18 18"
                      width="22"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                        fill="#ccc"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                        fill="#ccc"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="full-screen"
                  >
                    <svg
                      fill="none"
                      height="22"
                      viewBox="0 0 24 24"
                      width="22"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                        stroke="currentColor"
                        stroke-linecap="round"
                      />
                    </svg>
                  </span>
                </button>
                <a
                  class="toConsoleView"
                  href="/?view=log"
                >
                  <span>
                    consoleView
                  </span>
                </a>
              </div>
            </div>
            <pre
              class="container"
            >
              <div
                class="noLogs"
              >
                common.logs.noLogsText
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default View Test renders snapshot 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_MANUAL_INTERVENTION"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="MANUAL_INTERVENTION"
          id="bp3-tab-title_step-details_MANUAL_INTERVENTION"
          role="tab"
          tabindex="0"
        >
          pipeline.failureStrategies.strategiesLabel.ManualIntervention
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_POLICY_ENFORCEMENT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="POLICY_ENFORCEMENT"
          id="bp3-tab-title_step-details_POLICY_ENFORCEMENT"
          role="tab"
          tabindex="0"
        >
          pipeline.policyEnforcement.title
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_MANUAL_INTERVENTION"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_MANUAL_INTERVENTION"
        role="tabpanel"
      >
        <div
          class="manualInterventionTab"
        >
          <div
            class="title"
          >
            common.PermissibleActions
          </div>
          <div
            class="actionRow"
          >
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="rollback-stage"
                >
                  <svg
                    height="26"
                    viewBox="0 0 32 32"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M14.523 5.355a.5.5 0 10-.704-.71l-3.057 3.028a.5.5 0 000 .71l3.057 3.029a.5.5 0 10.704-.711L12.33 8.528H26a.5.5 0 01.5.5V26a.5.5 0 01-.5.5H6a.5.5 0 01-.5-.5v-6.526a.5.5 0 10-1 0V26A1.5 1.5 0 006 27.5h20a1.5 1.5 0 001.5-1.5V9.028a1.5 1.5 0 00-1.5-1.5H12.33l2.193-2.173zm-2.525 9.128a1 1 0 00-1 1v4a1 1 0 001 1h8.003a1 1 0 001-1v-4a1 1 0 00-1-1h-8.003zm0 1h8.003v4h-8.003v-4z"
                      fill="#0278D5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.StageRollback
              </p>
              <input
                name="StageRollback"
                type="checkbox"
                value="StageRollback"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-delete StyledProps--main"
                  icon="delete"
                >
                  <svg
                    data-icon="delete"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      delete
                    </desc>
                    <path
                      d="M15 6a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10l3.29-3.29c.19-.18.3-.43.3-.71zm-5-6C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Ignore
              </p>
              <input
                name="Ignore"
                type="checkbox"
                value="Ignore"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M17 4c-.28 0-.53.11-.71.29L7 13.59 3.71 10.3A.965.965 0 003 10a1.003 1.003 0 00-.71 1.71l4 4c.18.18.43.29.71.29s.53-.11.71-.29l10-10A1.003 1.003 0 0017 4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.MarkAsSuccess
              </p>
              <input
                name="MarkAsSuccess"
                type="checkbox"
                value="MarkAsSuccess"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-ban-circle StyledProps--main"
                  icon="ban-circle"
                >
                  <svg
                    data-icon="ban-circle"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      ban-circle
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm5 11H5c-.55 0-1-.45-1-1s.45-1 1-1h10c.55 0 1 .45 1 1s-.45 1-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Abort
              </p>
              <input
                name="Abort"
                type="checkbox"
                value="Abort"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-resume"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 11"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.57 0c.129 0 .243.052.345.118L6.92.11l6.755 4.42c.189.133.324.362.324.627a.732.732 0 01-.33.619l.006.007-6.755 4.421-.006-.007a.631.631 0 01-.345.118c-.371 0-.675-.332-.675-.737V.737c0-.405.304-.737.675-.737zM2.947 0c.406 0 .737.332.737.737v8.842a.739.739 0 01-.737.737H.737A.739.739 0 010 9.579V.737C0 .332.332 0 .737 0z"
                      fill="#4d5969"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.ProceedWithDefaultValues
              </p>
              <input
                name="ProceedWithDefaultValues"
                type="checkbox"
                value="ProceedWithDefaultValues"
              />
            </label>
          </div>
          <div
            class="actionRow"
          >
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="mark-as-failure"
                >
                  <svg
                    height="26"
                    viewBox="0 0 40 40"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.625 10a.75.75 0 01.75-.75h20.049a.75.75 0 01.75.75v9.248h8.579l-2.542-2.43a.75.75 0 011.036-1.085l3.862 3.692a.748.748 0 01.212.854.75.75 0 01-.212.294l-3.862 3.694a.75.75 0 01-1.037-1.084l2.544-2.433-8.58-.002V30a.75.75 0 01-.75.75H4.375a.75.75 0 01-.75-.75V10zm20.049 9.981v9.269H5.125v-18.5h18.549v9.231zM9.937 14.486a.752.752 0 00-1.062 0 .748.748 0 000 1.06L13.341 20l-4.466 4.454a.748.748 0 000 1.06.752.752 0 001.062 0l4.466-4.455 4.465 4.455a.752.752 0 001.062 0 .748.748 0 000-1.06L15.465 20l4.465-4.454a.748.748 0 000-1.06.752.752 0 00-1.062 0l-4.465 4.455-4.466-4.455z"
                      fill="#0278D5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.MarkAsFailure
              </p>
              <input
                name="MarkAsFailure"
                type="checkbox"
                value="MarkAsFailure"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default View Test renders snapshot: Policy Enforcement Tab - Default View 1`] = `
<div
  aria-hidden="false"
  aria-labelledby="bp3-tab-title_step-details_POLICY_ENFORCEMENT"
  class="bp3-tab-panel"
  id="bp3-tab-panel_step-details_POLICY_ENFORCEMENT"
  role="tabpanel"
>
  <div
    class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-top StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--margin-right-large"
      >
        pipeline.policyEvaluations.title
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green800"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        1
      </p>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Collapse--main collapse"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--padding-right-small"
                data-icon="main-chevron-down"
              >
                <svg
                  height="10"
                  viewBox="0 0 14 8"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
                  style="--text-line-clamp: 1; width: 300px;"
                >
                  <a
                    href="/account/acc/home/orgs/org/projects/project/setup/governance/policy-sets/alwayspass"
                  >
                    pipeline.policyEvaluations.policySetName
                  </a>
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  style="width: 100px;"
                >
                  projectLabel
                </p>
                <div
                  class="status success"
                >
                  <span
                    class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                    icon="tick-circle"
                  >
                    <svg
                      data-icon="tick-circle"
                      height="9"
                      viewBox="0 0 16 16"
                      width="9"
                    >
                      <desc>
                        tick-circle
                      </desc>
                      <path
                        d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main text"
                    style="--text-line-clamp: 1;"
                  >
                    pipeline.executionStatus.Success
                  </p>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
